# viva

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md
.claude/: .gitignore
crawler/: README.md  pyproject.toml
crawler/src/crawler/: __init__.py  __main__.py  clusters.py  discovery.py  emit.py  graph.py  refs.py  templating.py
crawler/src/crawler/parsers/: __init__.py  ini.py  json_.py  xml.py  yaml.py
crawler/tests/: conftest.py  test_cli.py  test_clusters.py  test_discovery.py  test_dogfood.py  test_emit.py  test_graph.py  test_integration.py  test_parsers_dispatch.py  test_parsers_ini.py  test_parsers_json.py  test_parsers_xml.py  test_parsers_yaml.py  test_refs.py  test_refs_d_aggregate.py  test_refs_fallback.py  test_refs_logical_id.py  test_refs_logical_id_whitelist.py  test_refs_xsd.py  test_scale_synthetic.py  test_templating.py
crawler/tests/fixtures/: sample-module.expected.graph.json
crawler/tests/fixtures/sample-d-dir/: foo.xml
crawler/tests/fixtures/sample-d-dir/bar.d/: orphan.xml
crawler/tests/fixtures/sample-d-dir/foo.d/: 01-alpha.xml  02-beta.xml
crawler/tests/fixtures/sample-fallback/: parent-no-fallback.xml  parent.xml
crawler/tests/fixtures/sample-logical-id/: declarer.xml  noise.xml  referrer.xml
crawler/tests/fixtures/sample-module/: README.md
crawler/tests/fixtures/sample-module/.hidden/: ignored.xml
crawler/tests/fixtures/sample-templating/: generated-a.xml  hand-authored.xml  templating_config.yaml
crawler/tests/fixtures/sample-xsd/: config.xml  dangling.xml  nons.xsd  schema.xsd
(+192 files in other folders)
